--- a/StarterTemplate_JS/css/site.css
+++ b/StarterTemplate_JS/css/site.css
@@ -2,7 +2,7 @@
   --primary-color: #1d5888;
   --secondary-color: #ff993b;
   --dark-color: #292929;
-  --white-color: #dff3e4;
+  --white-color: #ffffff;
 }
 
 body {
@@ -24,6 +24,19 @@ h4,
 h5,
 h6 {
   color: var(--primary-color);
+}
+
+footer {
+  padding-right: 1rem;
+}
+
+footer .social > a {
+  color: var(--white-color);
+  opacity: 0.75;
+}
+
+footer .social > a:hover {
+  opacity: 0.9;
 }
 
 main > .container {
