--- a/StarterTemplate_JS/css/site.css
+++ b/StarterTemplate_JS/css/site.css
@@ -39,6 +39,22 @@ footer .social > a:hover {
   opacity: 0.9;
 }
 
+.bsicon {
+  color: purple;
+}
+
+.jsicon {
+  color: rgb(226, 211, 4);
+}
+
+.html5icon {
+  color: orangered;
+}
+
+.cssicon {
+  color: rgb(11, 82, 214);
+}
+
 main > .container {
   padding: 60px 15px 0;
 }
